Added changes related to exception handling, logging and unit test cases